--- a/C#/Trivia/Trivia/Trivia.csproj
+++ b/C#/Trivia/Trivia/Trivia.csproj
@@ -70,8 +70,8 @@
   <ItemGroup>
     <Compile Include="Game.cs" />
     <Compile Include="GameRunner.cs" />
+    <Compile Include="GoldenMasterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestRunnerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
